[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name="ansys-scade-pyhg"
version="2.0.dev0"
description ="SCADE Test Harness Generator for Python."
readme="README.rst"

# only 3.10
requires-python = ">=3.10,<3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Ansys, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "Ansys, Inc.", email = "pyansys.core@ansys.com"},
]
dependencies=[
    "importlib-metadata >= 4.0; python_version >= '3.8'",
    # "ansys-scade-apitools",
    "pyparsing",
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
keywords=["Scade", "Wrapper", "Integration"]

[project.optional-dependencies]
build = [
    "build==1.2.1",
    "twine==5.1.1"
]
tests = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0"
]
doc = [
    "ansys-sphinx-theme[autoapi]==1.0.7",
    "jupyter_sphinx==0.5.3",
    "nbsphinx==0.9.5",
    "numpydoc==1.8.0",
    "sphinx==8.0.2",
    "sphinx-autodoc-typehints==2.3.0",
    "sphinx-copybutton==0.5.2",
]

[tool.flit.module]
name = "ansys.scade.pyhg"

[project.urls]
Source = "https://github.com/ansys/scade-pyhg"
Issues = "https://github.com/ansys/scade-pyhg/issues"
Discussions = "https://github.com/ansys/scade-pyhg/discussions"
Documentation = "https://pyhg.scade.docs.pyansys.com"
Releases = "https://github.com/ansys/scade-pyhg/releases"
Homepage = "https://www.ansys.com/products/embedded-software/ansys-scade-suite"

[tool.ruff]
line-length = 100
lint.select = [
    "E",    # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "F",    # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
    "I",    # isort, see https://beta.ruff.rs/docs/rules/#isort-i
    "N",    # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
]
lint.ignore = [
    "E501",  # Line too long. Ignoring this so "ruff.formatter" manages line length.
    "D203",  # One blank line required before class docstring.
    "D204",  # One blank line required after class docstring.
    "D206",  # To ignore: conflict with the formatter
    # TODO
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
]

# TODO: preserve leads to an error, although it is documented
[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys", "conftest", "test_utils"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D",]

[tool.coverage.run]
source = ["ansys.scade.pyhg"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-ra --cov=ansys.scade.pyhg --cov-report html:.cov/html --cov-branch --cov-report xml:.cov/xml --cov-report term -vv"

[project.entry-points."ansys.scade.registry"]
srg = "ansys.scade.pyhg:srg"

[project.entry-points."ansys.scade.test.thg"]
pyhg66 = "ansys.scade.pyhg.pyhg"
