[build-system]
requires = [
    "flit_core >=3.9,<3.12; python_version < '3.8'",
    "flit_core >=3.12,<4; python_version >= '3.8'",
]
build-backend = "flit_core.buildapi"

[project]
name="ansys-scade-pyhg"
version="2.0.dev0"
description ="SCADE Test Harness Generator for Python."
readme="README.rst"

# only 3.10 or >= 3.12
requires-python = ">=3.10,!=3.11.*"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
dependencies=[
    "ansys-scade-apitools",
    "pyparsing",
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]
keywords=["Scade", "Test", "Harness"]

[project.optional-dependencies]
build = [
    "build==1.4.1",
    "twine==6.2.0"
]
tests = [
    "pytest >= 9.0.1; python_version >= '3.8'",
    "pytest <= 7.4.4; python_version < '3.8'",
    "pytest-cov >= 6.0.0; python_version >= '3.8'",
    "pytest-cov <= 4.1.0; python_version < '3.8'",
    "ansys-scade-python-wrapper >= 2.3.0",
]
doc = [
    "ansys-sphinx-theme[autoapi]==1.7.2; python_version >= '3.12'",
    "ansys-sphinx-theme[autoapi]==1.6.4; python_version <= '3.10'",
    "numpydoc==1.10.0",
    "sphinx==9.1.0; python_version >= '3.12'",
    "sphinx==8.1.3; python_version <= '3.10'",
    "sphinx-autodoc-typehints==3.6.2; python_version >= '3.12'",
    "sphinx-autodoc-typehints==3.0.1; python_version <= '3.10'",
    "sphinxcontrib-globalsubs==1.1.0; python_version >= '3.12'",
    "sphinxcontrib-globalsubs==0.1.2; python_version <= '3.10'",
    "sphinxcontrib-httpdomain==2.0.0",
    "sphinx-copybutton==0.5.2",
]

[project.urls]
Source = "https://github.com/ansys/scade-pyhg"
Issues = "https://github.com/ansys/scade-pyhg/issues"
Discussions = "https://github.com/ansys/scade-pyhg/discussions"
Documentation = "https://pyhg.scade.docs.pyansys.com"
Releases = "https://github.com/ansys/scade-pyhg/releases"
Homepage = "https://www.ansys.com/products/embedded-software/ansys-scade-suite"

[project.entry-points."ansys.scade.registry"]
srg = "ansys.scade.pyhg:srg"

[project.entry-points."ansys.scade.test.thg"]
PYHG266 = "ansys.scade.pyhg.pyhg"

[tool.flit.module]
name = "ansys.scade.pyhg"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "F",    # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",    # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "N",    # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PTH",  # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys", "conftest", "test_utils"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D",]

[tool.coverage.run]
source = ["ansys.scade.pyhg"]
patch = ["subprocess"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-ra --cov=ansys.scade.pyhg --cov-report html:.cov/html --cov-branch --cov-report xml:.cov/xml --cov-report term -vv"

[tool.towncrier]
package = "ansys.scade.pyhg"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/scade-pyhg/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/scade-pyhg/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[tool.codespell]
ignore-words-list = ["synopsys"]

[tool.numpydoc_validation]
checks = [
    'GL06',  # Found unknown section
    'GL07',  # Sections are in the wrong order.
    'GL08',  # The object does not have a docstring
    'GL09',  # Deprecation warning should precede extended summary
    'GL10',  # reST directives {directives} must be followed by two colons
    'SS01',  # No summary found
    'SS02',  # Summary does not start with a capital letter
    'SS03',  # Summary does not end with a period
    'SS04',  # Summary contains heading whitespaces
    # "SS05", # Summary must start with infinitive verb, not third person
    'RT02',  # The first line of the Returns section should contain only the
    # type, unless multiple values are being returned"
]
exclude = [
    '\._',  # ignore private definitions
    'conftest.',
    'test.',
]

